Revision history for Datify.

{{$NEXT}}

 - Changed keyify to format numbers with numify, rather than as strings.

0.14.163  2014-06-12

 - Updated to use several Dist::Zilla features and plugins.
 - Improved documentation.
